Fix alignment of join form labels.

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -302,6 +302,9 @@ body.argumenta
     li
       text-align: right
 
+    label
+      display: inline-block
+
 
   // Login
 
